fixed name overflow

--- a/react-app/src/components/eventDetails/eventDetails.css
+++ b/react-app/src/components/eventDetails/eventDetails.css
@@ -80,6 +80,8 @@
 
 .task-el {
     margin-right: 10px;
+    max-width: 85px;
+    overflow-y: auto;
 }
 
 .task-el-details {
